UI fix and address change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -107,10 +107,27 @@
                 <li>
                     <a href="tel:+91 9940410072">+91 9940410072</a>
                 </li>
-                <li>
+                <li class="web-only">
                     <a href="https://www.linkedin.com/company/uxmint-design/" target="_blank">Linkedin</a> <span>|</span> <a href="https://medium.com/uxmint" target="_blank">Medium</a><span>|</span> <a href="https://www.instagram.com/uxmint.design/" target="_blank">Instagram</a>
                 </li>
             </ul>           
+        </div>
+    </div>
+    <div class="mobile-only">
+        <div class="row">
+            <div class="mediaIcons">
+                <ul>
+                    <li>
+                        <a href="https://www.linkedin.com/company/uxmint-design/" target="_blank">Linkedin</a> <span> | </span>
+                    </li>
+                    <li>
+                        <a href="https://medium.com/uxmint" target="_blank">Medium</a><span> | </span>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/uxmint.design/" target="_blank">Instagram</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <hr class="footer">
