--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -108,7 +108,7 @@
       <div class="row">
          <div class="col-md-6 layout-left">
             <h3>INDIA</h3>
-            <P>Alta vida, 4b, Thaiyur, near Kelambakkam,<br> Old Mahabalipuram Road, Chennai - 603103</P>
+            <P>No. 2 Sundaram Street, Narayanan Nagar, <br>Pallikaranai, Chennai - 600100</P>
          </div>
          <div class="col-md-6 layout-left">
             <h3>USA</h3>
