--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,6 @@
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
-.navbar-brand{
-    color: #C3343C;
-    font-weight: 600;
-    font-size: 22px;
-}
 header{
     z-index: 1;
 }
@@ -19,57 +14,30 @@ header{
 }
 .ux-logo{
     img{
-        margin-right: 85px;
-        padding-top: 10px;
-        margin-left: 35px;
-        @include media-breakpoint-down(lg){
-            margin-right: 24px;
-            padding-top: 10px;
-            margin-left: 0px;
-        }
-        @include media-breakpoint-down(md){
-            margin-right: 32px;
-            padding-top: 10px;
-            margin-left: 0px;
-        }
-        @include media-breakpoint-down(sm){
-            margin-right: -16px;
-            padding-top: 10px;
-            margin-left: 0px;
-        }
-       
+        margin-left: 28px;
+        margin-top: 7px;
+        width: 75%;
     }
 }
-
-
-.line{
-    border-left: 1px solid #AAAAAA;
-  height: 30px;
-  margin-top: 8px;
-    }
 h2{
-font-family: 'Muli', sans-serif;
-font-size: 14px;
-color: #000000;
-margin-left: -10px;
-padding-top: 5px;
+    font-family: "Muli", sans-serif;
+    font-size: 14px;
+    color: #000000;
+    margin-left: -14px;
+    padding-top: 9px;
 }
 .nav-link{
     font-family: 'Muli', sans-serif;
     font-size: 16px;
-    color: #505050;
+    color: #000000;
     font-weight: 400;
 }
 .lines{
     border-left: 1px solid #AAAAAA;
-  height: 25px;
-  margin-top: 8px;
-  margin-left: 50px;
-    }
-    .mobile-only{
-        display: none;
-    }
-
+    height: 25px;
+    margin-top: 8px;
+    margin-left: 50px;
+}
 .menu-activator{
     cursor: pointer;
     position: relative;
@@ -102,6 +70,11 @@ padding-top: 5px;
         }
     }
 }
+.nav-item a.active{
+        color: #000000;
+        border-bottom: 3px solid #000000;
+    }
+
 @include media-breakpoint-down(lg){
     img{
         margin-left: -20px;
@@ -161,6 +134,10 @@ padding-top: 5px;
     margin-left: -20px;
     padding-top: 5px;
     }
+}
+
+.mobile-only{
+    display: none;
 }
 footer{
     background-color: #282829;
@@ -288,82 +265,13 @@ footer{
     }
 }
 }
-.nav-item a.active{
-    color: #C3343C;
-}
 
-
-// ************** Button Hover *****************
-
-
-.snip1189 {
-    font-family:Muli,sans-serif;
-    text-align: center;
-    
-    font-size: 16px;
-    color: #505050;
-    font-weight: 400;
-  }
-  .snip1189 * {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transition: all 0.35s ease;
-    transition: all 0.35s ease;
-  }
-  .snip1189 li {
-    display: inline-block;
-    list-style: outside none none;
-   
-    padding: 0;
-  }
-  .snip1189 a {
-    display: block;
-    position: relative;
-    text-decoration: none;
-  }
-  .snip1189 a:before,
-  .snip1189 a:after {
-    height: 8px;
-    width: 8px;
-    position: absolute;
-    content: '';
-    -webkit-transition: all 0.35s ease;
-    transition: all 0.35s ease;
-    opacity: 0;
-  }
-  .snip1189 a:before {
-    left: 0;
-    top: 0;
-    border-left: 1px solid #c0392b;
-    border-top: 1px solid #c0392b;
-    -webkit-transform: translate(100%, 50%);
-    transform: translate(100%, 50%);
-  }
-  .snip1189 a:after {
-    right: 0;
-    bottom: 0;
-    border-right: 1px solid #c0392b;
-    border-bottom: 1px solid #c0392b;
-    -webkit-transform: translate(-100%, -50%);
-    transform: translate(-100%, -50%);
-  }
-  .snip1189 a:hover,
-  .snip1189 .current a {
-    color:#C3343Cff;
-  }
-  .snip1189 a:hover:before,
-  .snip1189 .current a:before,
-  .snip1189 a:hover:after,
-  .snip1189 .current a:after {
-    -webkit-transform: translate(0%, 0%);
-    transform: translate(0%, 0%);
-    opacity: 1;
-  }
 // ************ SOCIAL MEDIA HOVER *************
 
-.social-icon{ a{
+.social-icon { 
+    a{
     z-index:3;
-}
+    }
     margin-left: 4px;
     cursor: pointer;
 }
@@ -376,25 +284,19 @@ footer{
 .social-media
 {
     a::after{
-content: "";
-width: 100%;
-height:100%;
-top: 0;
-left: 0;
-background-color: #C3343C;
-position: absolute;
-z-index: 1;
-transform: translateX(-100%);
-}
+        content: "";
+        width: 100%;
+        height:100%;
+        top: 0;
+        left: 0;
+        background-color: #C3343C;
+        position: absolute;
+        z-index: 1;
+        transform: translateX(-100%);
+    }
 a.hover:after{
     transform: translateX(0%);
 }
-}
-.social-media2{
-    padding: 3px;
-    padding: 10px;
-    background-color: #c3343c;
-    margin-left: 4px;
 }
 
 
