--- a/src/app/components/career/career.component.html
+++ b/src/app/components/career/career.component.html
@@ -60,7 +60,7 @@
                   <h5>2 - 4 Years</h5><h6>Experience </h6> 
                 </div>
                 <div class="col-md-3 text-right">
-                  <div class="button">
+                  <div class="anime-button">
                      <div class="btn btnn" routerLink="/career/job-description">View</div>
                   </div>
                 </div>
