--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -37,7 +37,7 @@
 <div class="works">
       <div class="banner">
          <div class="container">
-            <h1>We have worked with companies <br>in their stage of  <span> incubation, revival <br> & next leap</span> </h1>
+            <h1>We have worked with companies in their stage of  <br><span> incubation, revival & next leap</span> </h1>
             <hr class="line">
            </div>
            <div class="statistics">
@@ -46,17 +46,17 @@
                   <div class="col-md-4 col-lg-6">
                    <div class="row">
                       <div class="col-md-6 col-lg-4">
-                         <h2>70 <span>+</span></h2>
+                         <h2>70 +</h2>
                       </div> 
                       <div class="col-md-5 col-lg-8">
-                         <h5>Satisfied Clients</h5>
+                         <h5>Projects</h5>
                       </div>
                    </div>
                   </div>
                   <div class="col-md-4 col-lg-6 only-mobile web-only">
                    <div class="row">
                       <div class="col-md-6  col-lg-3">
-                         <h2>7 <span>+</span></h2>
+                         <h2>8 +</h2>
                       </div>
                       <div class="col-md-5  col-lg-8">
                          <h5>Years of Service</h5>
