--- a/src/app/modules/services/components/user-experience/user-experience.component.html
+++ b/src/app/modules/services/components/user-experience/user-experience.component.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-    <div class="service-layout1">
+    <!-- <div class="service-layout1">
         <div class="row">
             <div class="col-md-6 left-layout">
                 <div class="container">
@@ -59,7 +59,7 @@
               <img src="./assets/images/services/Asset11.svg" alt="User Experience">
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="service-layout2">
         <div class="container">
             <div class="row">
@@ -285,8 +285,8 @@
       <div class="row">
           <div class="col-md-6 left">
               <h2>Case Studies</h2>
-              <div class="button">
-                  <div class="btn btnn" routerLink="/works">See All Works</div>
+              <div class="anime-button">
+                  <a routerLink="/works">See All Works</a>
               </div>
           </div>
           <div class="col-md-6 right">
