--- a/src/app/modules/work/components/skill-development/skill-development.component.scss
+++ b/src/app/modules/work/components/skill-development/skill-development.component.scss
@@ -27,7 +27,7 @@ h6{
     }
 } 
     .banner{
-        background-color: #DDDDDD;
+        background-color: #d0b9e4;
         padding-top: 140px;
         height: 700px;
         padding: 250px 0px;
@@ -521,7 +521,7 @@ h6{
 
 header{
     z-index: 1;
-    background-color: #DDDDDD;
+    background-color: #d0b9e4;
     h2{
         font-family: "Muli", sans-serif;
         font-size: 14px;
