--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,7 +171,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         height: 100%;
         top:0;
         left:0;
-        background-color: #C3343C;
+        background-color: #000000;
         transition:all .3s;
         transform: translateX(-100%);
         z-index: -1;
@@ -182,7 +182,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     }
     a:hover{
         color: #fff;
-        border: 2px solid #C3343C;
+        border: 2px solid #000000;
     
     }
 
@@ -225,7 +225,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         transform: translateX(0);
     }
     a:hover{
-        color:#C3343C;
+        color:#000000;
     
     }
   }
@@ -272,7 +272,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         transform: translateX(0);
     }
     a:hover{
-        color:#C3343C;
+        color:#000000;
     
     }
   }
@@ -314,7 +314,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         transform: translateX(0);
     }
     a:hover{
-        color:#C3343C;
+        color:#000000;
     
     }
   }
