--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -6,7 +6,7 @@
 }
 h1{
     font-size: 72px;
-    color: #C3343C;
+    color: #000000;
     font-family: Baskerville;
     @include media-breakpoint-down(md) {
         font-size: 36px;
@@ -202,9 +202,7 @@ p{
             margin-bottom: 25px;
             margin-left: 10px;
             &:hover{
-                svg{
-                    color: #C3343C !important;
-                }
+                background-color: #e9e9e9;
             }
         }
         .image{
@@ -409,7 +407,7 @@ p{
        }
     }
     .craft{
-        background-color: #C3343C;
+        background-color: #000000;
         padding-top: 40px;
         padding-bottom: 40px;
         h2{
@@ -473,8 +471,8 @@ p{
             &.active{
                 width: 11px;
                 height: 11px;
-                border: 8px solid #C3343C;
-                background-color: #C3343C !important;
+                border: 8px solid #000000;
+                background-color: #000000 !important;
             }
         }
     }
